<resources>
    <string name="app_name">GymDatabase</string>
    <string name="action_students">Students</string>
    <string name="action_classes">Classes</string>
    <string name="action_staff">Staff</string>
    <string name="action_equipment">Equipment</string>
    <string name="action_rent_equipment">Rent Equipment</string>
    <string name="action_sign_up_for_class">Sign-up for a Class</string>
    <string name="action_teaches">Teaches</string>

    <string name="equipment_id">Equipment ID</string>
    <string name="equipment_type">Equipment Type</string>
    <string name="equipment_quantity">Equipment Quantity</string>
    <string name="equipment_rental">Equipment Rental Cost</string>
    <string name="sort_by_type_asc">Sort by Type (ASC)</string>
    <string name="sort_by_type_dsc">Sort by Type (DESC)</string>
    <string name="sort_by_id_asc">Sort by ID (ASC)</string>
    <string name="sort_by_id_dsc">Sort by ID (DESC)</string>
    <string name="sort_by_quan_asc">Sort by Quantity (ASC)</string>
    <string name="sort_by_quan_dsc">Sort by Quantity (DESC)</string>
    <string name="sort_by_cost_asc">Sort by Rental Cost (ASC)</string>
    <string name="sort_by_cost_dsc">Sort by Rental Cost (DESC)</string>

    <string name="number_to_rent">Number To Rent</string>
    <string name="days_to_rent">Days To Rent</string>
    <string name="check_quantity">Check Quantity</string>
    <string name="check_cost">Check Cost</string>
    <string name="cost">Cost   $</string>
    <string name="student_id">Student ID</string>
    <string name="sort_by_time_asc">Sort by Time (ASC)</string>
    <string name="sort_by_time_dsc">Sort by Time (DESC)</string>
    <string name="sort_by_cname_asc">Sort by Name (ASC)</string>
    <string name="sort_by_cname_dsc">Sort by Name (DESC)</string>
    <string name="sort_by_cloc_asc">Sort by Location (ASC)</string>
    <string name="sort_by_cloc_dsc">Sort by Location (DESC)</string>
    <string name="sort_by_cdate_asc">Sort by Date (ASC)</string>
    <string name="sort_by_cdate_dsc">Sort by Date (DESC)</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="staff_id">Staff ID</string>
    <string name="year">Year</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="sort_by_name_asc">Sort by Name (ASC)</string>
    <string name="sort_by_name_dsc">Sort by Name (DESC)</string>
    <string name="sort_by_position_asc">Sort by Position (ASC)</string>
    <string name="sort_by_position_dsc">Sort by Position (DESC)</string>
    <string name="sort_by_year_dsc">Sort by Year (DESC)</string>
    <string name="class_id">Class ID</string>
    <string name="class_name">Class Name</string>
    <string name="class_time">Class Time</string>
    <string name="class_date">Class Date</string>
    <string name="class_location">Class Location</string>

    <string name="sort_by_class_id_asc"> Sort by Class ID (ASC)</string>
    <string name="sort_by_class_id_dsc"> Sort by Class ID (DESC)</string>
    <string name="sort_by_staff_id_asc"> Sort by Staff ID (ASC)</string>
    <string name="sort_by_staff_id_dsc"> Sort by Staff ID (DESC)</string>
    <string name="sort_by_year_asc">Sort by Year (ASC)</string>
</resources>
