<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_equipment"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1">
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id = "@+id/table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/Column1"
                    android:layout_width="@dimen/table_col_width"
                    android:layout_height="wrap_content"
                    android:text="@string/equipment_id"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/Column2"
                    android:layout_width="@dimen/table_col_width"
                    android:layout_height="wrap_content"
                    android:text="@string/equipment_type"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/Column3"
                    android:layout_width="@dimen/table_col_width"
                    android:layout_height="wrap_content"
                    android:text="@string/equipment_quantity"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/Column4"
                    android:layout_width="@dimen/table_col_width"
                    android:layout_height="wrap_content"
                    android:text="@string/equipment_rental"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>