<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/newID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.49"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/newName"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.93"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/newPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:ems="10"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/searchField"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.34" />

        <Spinner
            android:id="@+id/searchLimit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.29" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sortID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.86"
            android:text="@string/sort_by_id_dsc" />

        <Button
            android:id="@+id/sortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.71"
            android:text="@string/sort_by_name_dsc" />

        <Button
            android:id="@+id/sortPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_position_dsc"
            android:layout_weight="0.38" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TableRow
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Column1"
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:text="@string/staff_id"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/Column2"
                    android:layout_width="265dp"
                    android:layout_height="match_parent"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/Column3"
                    android:layout_width="@dimen/table_col_width"
                    android:layout_height="match_parent"
                    android:text="@string/position"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>